--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,21 @@
 {
     "navigation": {
         "back": "Back"
+    },
+    "cube_selection": {
+        "title": "Select a cube to validate",
+        "explanation": "To validate your data cube, input your SPARQL endpoint and choose a cube to validate.",
+        "filter": "Filter cubes"
+    },
+    "cube_validation": {
+        "invalid": "Cube does not conform to the selected profile",
+        "valid": "Cube conforms to the selected profile",
+        "title_observation_validation_process": "Observation Validation Process",
+        "describe_observation_validation_process": "10 observations are validated, then another 10 observations are loaded and validated. This process is repeated up to 10 times. Once more than 20 errors have been found, the process is terminated.",
+        "observation_valid": "Conforms to the Cube Shape constraints",
+        "observation_invalid": "Does not conform to the Cube Shape constraints"
+    },
+    "footer": {
+        "title": "Federal Office for the Environment FOEN"
     }
 }
