--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -13,7 +13,8 @@
         "title_observation_validation_process": "Processus de validation des observations",
         "describe_observation_validation_process": "10 observations sont validées, puis 10 autres observations sont chargées et validées. Ce processus est répété jusqu'à 10 fois. Une fois que plus de 20 erreurs ont été trouvées, le processus est arrêté.",
         "observation_valid": "Conforme aux contraintes de forme de cube",
-        "observation_invalid": "Ne conforme pas aux contraintes de forme de cube"
+        "observation_invalid": "Ne conforme pas aux contraintes de forme de cube",
+        "url_error": "Veuillez fournir une URL HTTP valide"
     },
     "footer": {
         "title": "Office fédéral de l'environnement OFEV"
