--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -13,7 +13,8 @@
         "title_observation_validation_process": "Processo di validazione delle osservazioni",
         "describe_observation_validation_process": "Vengono validate 10 osservazioni, poi altre 10 osservazioni vengono caricate e validate. Questo processo viene ripetuto fino a 10 volte. Una volta che sono stati trovati più di 20 errori, il processo viene interrotto.",
         "observation_valid": "Conforma ai vincoli della forma del cube",
-        "observation_invalid": "Non conforma ai vincoli della forma del cube"
+        "observation_invalid": "Non conforma ai vincoli della forma del cube",
+        "url_error": "Si prega di fornire un URL HTTP valido"
     },
     "footer": {
         "title": "Ufficio federale dell'ambiente UFAM"
